[package]
name = "websocket_server"
version = "0.1.0"
authors = ["kumarmo2 <kr.mohit6794@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.1.4"
num_cpus = "1.13.0"
futures = "0.3.4"
tungstenite = "0.10.1"
async-tungstenite = "0.4.2"
futures-util = "0.3.4"
chat_common_types = { git = "https://github.com/kumarmo2/chat_common_types.git", branch = "master"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
manager = {git = "https://github.com/kumarmo2/rabbitmq_manager/", branch = "master"}
